cmake_minimum_required(VERSION 3.8)
project(projeto_2017)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        Code/Debug/Code/src/cota.d
        Code/Debug/Code/src/cota.o
        Code/Debug/Code/src/main.d
        Code/Debug/Code/src/main.o
        Code/Debug/Code/src/subdir.mk
        Code/Debug/Code/subdir.mk
        Code/Debug/src/apoio.o
        Code/Debug/src/areaCientifica.o
        Code/Debug/src/associacao.o
        Code/Debug/src/associacaoMS.o
        Code/Debug/src/associado.o
        Code/Debug/src/ciencia.o
        Code/Debug/src/cota.o
        Code/Debug/src/data.o
        Code/Debug/src/dominioCientifico.o
        Code/Debug/src/email.o
        Code/Debug/src/evento.o
        Code/Debug/src/gestor.o
        Code/Debug/src/main.o
        Code/Debug/src/subAreaCientifica.o
        Code/Debug/codigo
        Code/Debug/makefile
        Code/Debug/objects.mk
        Code/Debug/projeto_2017.exe
        Code/Debug/sources.mk
        Code/html/search/all_0.html
        Code/html/search/all_0.js
        Code/html/search/all_1.html
        Code/html/search/all_1.js
        Code/html/search/all_10.html
        Code/html/search/all_10.js
        Code/html/search/all_11.html
        Code/html/search/all_11.js
        Code/html/search/all_2.html
        Code/html/search/all_2.js
        Code/html/search/all_3.html
        Code/html/search/all_3.js
        Code/html/search/all_4.html
        Code/html/search/all_4.js
        Code/html/search/all_5.html
        Code/html/search/all_5.js
        Code/html/search/all_6.html
        Code/html/search/all_6.js
        Code/html/search/all_7.html
        Code/html/search/all_7.js
        Code/html/search/all_8.html
        Code/html/search/all_8.js
        Code/html/search/all_9.html
        Code/html/search/all_9.js
        Code/html/search/all_a.html
        Code/html/search/all_a.js
        Code/html/search/all_b.html
        Code/html/search/all_b.js
        Code/html/search/all_c.html
        Code/html/search/all_c.js
        Code/html/search/all_d.html
        Code/html/search/all_d.js
        Code/html/search/all_e.html
        Code/html/search/all_e.js
        Code/html/search/all_f.html
        Code/html/search/all_f.js
        Code/html/search/classes_0.html
        Code/html/search/classes_0.js
        Code/html/search/classes_1.html
        Code/html/search/classes_1.js
        Code/html/search/classes_2.html
        Code/html/search/classes_2.js
        Code/html/search/classes_3.html
        Code/html/search/classes_3.js
        Code/html/search/classes_4.html
        Code/html/search/classes_4.js
        Code/html/search/classes_5.html
        Code/html/search/classes_5.js
        Code/html/search/close.png
        Code/html/search/files_0.html
        Code/html/search/files_0.js
        Code/html/search/files_1.html
        Code/html/search/files_1.js
        Code/html/search/files_2.html
        Code/html/search/files_2.js
        Code/html/search/files_3.html
        Code/html/search/files_3.js
        Code/html/search/files_4.html
        Code/html/search/files_4.js
        Code/html/search/files_5.html
        Code/html/search/files_5.js
        Code/html/search/files_6.html
        Code/html/search/files_6.js
        Code/html/search/functions_0.html
        Code/html/search/functions_0.js
        Code/html/search/functions_1.html
        Code/html/search/functions_1.js
        Code/html/search/functions_2.html
        Code/html/search/functions_2.js
        Code/html/search/functions_3.html
        Code/html/search/functions_3.js
        Code/html/search/functions_4.html
        Code/html/search/functions_4.js
        Code/html/search/functions_5.html
        Code/html/search/functions_5.js
        Code/html/search/functions_6.html
        Code/html/search/functions_6.js
        Code/html/search/functions_7.html
        Code/html/search/functions_7.js
        Code/html/search/functions_8.html
        Code/html/search/functions_8.js
        Code/html/search/functions_9.html
        Code/html/search/functions_9.js
        Code/html/search/functions_a.html
        Code/html/search/functions_a.js
        Code/html/search/functions_b.html
        Code/html/search/functions_b.js
        Code/html/search/functions_c.html
        Code/html/search/functions_c.js
        Code/html/search/functions_d.html
        Code/html/search/functions_d.js
        Code/html/search/mag_sel.png
        Code/html/search/nomatches.html
        Code/html/search/related_0.html
        Code/html/search/related_0.js
        Code/html/search/search.css
        Code/html/search/search.js
        Code/html/search/search_l.png
        Code/html/search/search_m.png
        Code/html/search/search_r.png
        Code/html/search/searchdata.js
        Code/html/search/variables_0.html
        Code/html/search/variables_0.js
        Code/html/search/variables_1.html
        Code/html/search/variables_1.js
        Code/html/search/variables_10.html
        Code/html/search/variables_10.js
        Code/html/search/variables_2.html
        Code/html/search/variables_2.js
        Code/html/search/variables_3.html
        Code/html/search/variables_3.js
        Code/html/search/variables_4.html
        Code/html/search/variables_4.js
        Code/html/search/variables_5.html
        Code/html/search/variables_5.js
        Code/html/search/variables_6.html
        Code/html/search/variables_6.js
        Code/html/search/variables_7.html
        Code/html/search/variables_7.js
        Code/html/search/variables_8.html
        Code/html/search/variables_8.js
        Code/html/search/variables_9.html
        Code/html/search/variables_9.js
        Code/html/search/variables_a.html
        Code/html/search/variables_a.js
        Code/html/search/variables_b.html
        Code/html/search/variables_b.js
        Code/html/search/variables_c.html
        Code/html/search/variables_c.js
        Code/html/search/variables_d.html
        Code/html/search/variables_d.js
        Code/html/search/variables_e.html
        Code/html/search/variables_e.js
        Code/html/search/variables_f.html
        Code/html/search/variables_f.js
        Code/html/annotated.html
        Code/html/apic__associados_8txt.html
        Code/html/apic__conferencias_8txt.html
        Code/html/apic__dominios_8txt.html
        Code/html/apic__emails_8txt.html
        Code/html/apic__escolaVerao_8txt.html
        Code/html/apic__gestores_8txt.html
        Code/html/apoio_8cpp.html
        Code/html/apoio_8h.html
        Code/html/apoio_8h_source.html
        Code/html/areaCientifica_8cpp.html
        Code/html/areaCientifica_8h.html
        Code/html/areaCientifica_8h_source.html
        Code/html/arrowdown.png
        Code/html/arrowright.png
        Code/html/associacao_8cpp.html
        Code/html/associacao_8h.html
        Code/html/associacao_8h_source.html
        Code/html/associacaoMS_8cpp.html
        Code/html/associacaoMS_8h.html
        Code/html/associacaoMS_8h_source.html
        Code/html/associacoes_8txt.html
        Code/html/associado_8cpp.html
        Code/html/associado_8h.html
        Code/html/associado_8h_source.html
        Code/html/bc_s.png
        Code/html/bdwn.png
        Code/html/ciencia_8cpp.html
        Code/html/ciencia_8h.html
        Code/html/ciencia_8h_source.html
        Code/html/classApoio-members.html
        Code/html/classApoio.html
        Code/html/classAreaCientifica-members.html
        Code/html/classAreaCientifica.html
        Code/html/classAreaCientificaRepetida-members.html
        Code/html/classAreaCientificaRepetida.html
        Code/html/classAssociacao-members.html
        Code/html/classAssociacao.html
        Code/html/classAssociacaoMS-members.html
        Code/html/classAssociacaoMS.html
        Code/html/classAssociacaoRepetida-members.html
        Code/html/classAssociacaoRepetida.html
        Code/html/classAssociado-members.html
        Code/html/classAssociado.html
        Code/html/classAssociado.png
        Code/html/classAssociadoRepetido-members.html
        Code/html/classAssociadoRepetido.html
        Code/html/classCiencia-members.html
        Code/html/classCiencia.html
        Code/html/classCienciaRepetida-members.html
        Code/html/classCienciaRepetida.html
        Code/html/classConferencia-members.html
        Code/html/classConferencia.html
        Code/html/classConferencia.png
        Code/html/classContributor-members.html
        Code/html/classContributor.html
        Code/html/classContributor.png
        Code/html/classCota-members.html
        Code/html/classCota.html
        Code/html/classData-members.html
        Code/html/classData.html
        Code/html/classDominioCientifico-members.html
        Code/html/classDominioCientifico.html
        Code/html/classEmail-members.html
        Code/html/classEmail.html
        Code/html/classes.html
        Code/html/classEscolaVerao-members.html
        Code/html/classEscolaVerao.html
        Code/html/classEscolaVerao.png
        Code/html/classEvento-members.html
        Code/html/classEvento.html
        Code/html/classEvento.png
        Code/html/classGestor-members.html
        Code/html/classGestor.html
        Code/html/classSubAreaCientifica-members.html
        Code/html/classSubAreaCientifica.html
        Code/html/classSubAreaCientificaRepetida-members.html
        Code/html/classSubAreaCientificaRepetida.html
        Code/html/classSubscriber-members.html
        Code/html/classSubscriber.html
        Code/html/classSubscriber.png
        Code/html/closed.png
        Code/html/cota_8cpp.html
        Code/html/cota_8h.html
        Code/html/cota_8h_source.html
        Code/html/data_8cpp.html
        Code/html/data_8h.html
        Code/html/data_8h_source.html
        Code/html/dir_68267d1309a1af8e8297ef4c3efbcdba.html
        Code/html/doc.png
        Code/html/dominioCientifico_8cpp.html
        Code/html/dominioCientifico_8h.html
        Code/html/dominioCientifico_8h_source.html
        Code/html/doxygen.css
        Code/html/doxygen.png
        Code/html/dynsections.js
        Code/html/email_8cpp.html
        Code/html/email_8h.html
        Code/html/email_8h_source.html
        Code/html/evento_8cpp.html
        Code/html/evento_8h.html
        Code/html/evento_8h_source.html
        Code/html/files.html
        Code/html/folderclosed.png
        Code/html/folderopen.png
        Code/html/functions.html
        Code/html/functions_c.html
        Code/html/functions_d.html
        Code/html/functions_e.html
        Code/html/functions_f.html
        Code/html/functions_func.html
        Code/html/functions_func_c.html
        Code/html/functions_func_d.html
        Code/html/functions_func_e.html
        Code/html/functions_func_g.html
        Code/html/functions_func_i.html
        Code/html/functions_func_l.html
        Code/html/functions_func_m.html
        Code/html/functions_func_o.html
        Code/html/functions_func_r.html
        Code/html/functions_func_s.html
        Code/html/functions_func_v.html
        Code/html/functions_g.html
        Code/html/functions_h.html
        Code/html/functions_i.html
        Code/html/functions_l.html
        Code/html/functions_m.html
        Code/html/functions_n.html
        Code/html/functions_o.html
        Code/html/functions_p.html
        Code/html/functions_r.html
        Code/html/functions_rela.html
        Code/html/functions_s.html
        Code/html/functions_t.html
        Code/html/functions_v.html
        Code/html/functions_vars.html
        Code/html/gestor_8cpp.html
        Code/html/gestor_8h.html
        Code/html/gestor_8h_source.html
        Code/html/globals.html
        Code/html/globals_func.html
        Code/html/globals_vars.html
        Code/html/hierarchy.html
        Code/html/index.html
        Code/html/jquery.js
        Code/html/main_8cpp.html
        Code/html/menu.js
        Code/html/menudata.js
        Code/html/nav_f.png
        Code/html/nav_g.png
        Code/html/nav_h.png
        Code/html/open.png
        Code/html/splitbar.png
        Code/html/subAreaCientifica_8cpp.html
        Code/html/subAreaCientifica_8h.html
        Code/html/subAreaCientifica_8h_source.html
        Code/html/sync_off.png
        Code/html/sync_on.png
        Code/html/tab_a.png
        Code/html/tab_b.png
        Code/html/tab_h.png
        Code/html/tab_s.png
        Code/html/tabs.css
        Code/src/apic_associados.txt
        Code/src/apic_conferencias.txt
        Code/src/apic_dominios.txt
        Code/src/apic_emails.txt
        Code/src/apic_escolaVerao.txt
        Code/src/apic_gestores.txt
        Code/src/apoio.cpp
        Code/src/apoio.h
        Code/src/areaCientifica.cpp
        Code/src/areaCientifica.h
        Code/src/associacao.cpp
        Code/src/associacao.h
        Code/src/associacaoMS.cpp
        Code/src/associacaoMS.h
        Code/src/associacoes.txt
        Code/src/associado.cpp
        Code/src/associado.h
        Code/src/ciencia.cpp
        Code/src/ciencia.h
        Code/src/cota.cpp
        Code/src/cota.h
        Code/src/data.cpp
        Code/src/data.h
        Code/src/dominioCientifico.cpp
        Code/src/dominioCientifico.h
        Code/src/email.cpp
        Code/src/email.h
        Code/src/evento.cpp
        Code/src/evento.h
        Code/src/gestor.cpp
        Code/src/gestor.h
        Code/src/main.cpp
        Code/src/subAreaCientifica.cpp
        Code/src/subAreaCientifica.h
        Code/apic_associados.txt
        Code/apic_conferencias.txt
        Code/apic_dominios.txt
        Code/apic_emails.txt
        Code/apic_escolaVerao.txt
        Code/apic_gestores.txt
        Code/associacoes.txt
        Code/doxyfile)

add_executable(projeto_2017 ${SOURCE_FILES})